<resources>
    <string name="app_name">Bangumi</string>
    <string name="bangumi">番剧</string>
    <string name="opendrawer">open drawer</string>
    <string name="closedrawer">close drawer</string>
    <string name="more">更多</string>
    <string name="error_tips">加载出错了</string>
    <string name="no_result">暂无结果</string>
    <string name="category">分类</string>
    <string name="myfavorite">我的追番</string>
    <string name="history">历史记录</string>
    <string name="cache">下载缓存</string>
    <string name="setting">设置</string>
    <string name="timetable">时间表</string>

    //Preference
    <string name="title_play_settings">播放</string>
    <string name="summary_auto_play_next">视频结束后自动播放下一集</string>
    <string name="title_auto_play_next">自动播放下一集</string>
    <string name="summary_play_no_wifi">非wifi环境下不再提醒直接播放视频</string>
    <string name="title_play_no_wifi">非wifi下自动播放</string>
    <string name="title_download_settings">下载</string>
    <string name="titel_auto_recover_download">自动恢复下载</string>
    <string name="summary_auto_recover_download">wifi环境下软件开启后自动恢复未完成下载</string>
    <string name="title_other_settings">其他</string>
    <string name="title_about">关于</string>
    <string name="title_project_url">源码地址</string>
    <string name="title_home_sourch">主页</string>
    <string name="key_auto_play_next">auto_play_next</string>
    <string name="key_play_no_wifi">play_no_wifi</string>
    <string name="key_auto_recover_download">auto_recover_download</string>
    <string name="key_home_sourch">home_sourch</string>
    <string name="title_versions">版本</string>
    <string name="toast_file_already_delete">文件已被删除</string>
    <string name="snackbar_click_again_finish">再按一次退出</string>
    <string name="text_error_click_retry">发生了未知错误, 点击图片重试</string>
    <string name="key_decoder_plan">decoder_plan</string>
    <string name="title_decoder_plan">解码方式</string>

    <string name="search_transition_name">search_transition_name</string>
    <string name="key_danmaku_switch">swit_danmuku</string>
    <string name="title_danmaku_switch">自动打开弹幕</string>
    <string name="summary_danmaku_switch">有弹幕的视频源自动打开弹幕</string>
    <string name="text_danmaku_switch">弹幕开关</string>
    <string name="text_danmaku_textsize">弹幕字号</string>
    <string name="text_danmaku_max_line">最大行数</string>
    <string name="toast_no_danmaku">当前视频源没有弹幕哦~</string>
    <string name="key_danmaku_textsize">danmaku_text_size</string>
    <string name="key_danmaku_maxline">danmaku_max_line</string>
    <string name="title_clear_cache">清除缓存</string>
    <string name="summary_clear_cache">清除图片缓存</string>
    <string name="key_clear_cache">clear_cache</string>
    <string name="text_style">风格</string>
    <string name="text_cast">角色声优</string>
    <string name="text_staff">制作</string>
    <string name="text_intro">简介</string>

</resources>
