<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/home"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bangumi"
            android:icon="@drawable/ic_nav_bangumi"
            android:title="@string/bangumi"/>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_nav_category"
            android:title="@string/category"/>

        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_new_bangumi_timetable"
            android:title="@string/timetable"/>
    </group>

    <group
        android:id="@+id/local"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_like"
            android:icon="@drawable/ic_nav_like"
            android:title="@string/myfavorite"/>
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_nav_download"
            android:title="@string/cache"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_nav_history"
            android:title="@string/history"/>

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_nav_setting"
            android:title="@string/setting"/>


    </group>

</menu>